Fix top margin for projects and collapse nav bar on click

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -136,6 +136,9 @@
 }
 
 @media (max-width: 450px) {
+    .name-logo {
+        width: 30px;
+    }
     .greeting-text {
         font-size: 2rem;
         margin: 0rem;
